# okrtracker

./: .gitignore  Makefile  README.md  docker-compose.dev.yml
backend/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-entrypoint.sh  manage.py  pyproject.toml
backend/common_utils/api/: __init__.py  permissions.py
backend/common_utils/pytest/: fixtures.py
backend/config/: urls.py
backend/config/settings/: __init__.py
backend/config/settings/components/: base.py  database.py
backend/core/: admin.py  apps.py  authentication.py  models.py
backend/core/api/: serializers.py  urls.py  views.py
backend/core/migrations/: 0001_initial.py
backend/core/selectors/: __init__.py  roles.py  teams.py  users.py
backend/core/services/: auth.py  keycloak.py  roles.py  teams.py  users.py
backend/core/tests/: conftest.py  test_api.py  test_framework_setup.py  test_keycloak.py
backend/okr/: admin.py  apps.py  constants.py  models.py  signals.py
backend/okr/api/: urls.py  views.py
backend/okr/api/serializers/: __init__.py  change_logs.py  check_ins.py  comments.py  common.py  key_results.py  okrs.py  (+1 more)
backend/okr/migrations/: 0001_initial.py  0002_okr_keyresult.py  0003_changelog_checkin_comment.py  0004_alter_progress_fields.py  0005_replace_keyresult_order_with_value.py  0006_remove_keyresult_progress.py  0007_normalize_okr_statuses.py
backend/okr/selectors/: __init__.py  check_ins.py  key_results.py  okrs.py  quarters.py
backend/okr/services/: audit.py  checkins.py  comments.py  demo_seed.py  okrs.py  progress.py  quarters.py  validators.py
backend/okr/tests/: conftest.py  test_api.py  test_models.py
backend/templates/admin/: base.html  base_site.html
(+51 files in other folders)
